# perg

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: tests.yml
include/perg/: colors.hpp  mmap_file.hpp  scanner.hpp
src/: main.cpp  mmap_file.cpp  scanner.cpp
tests/: regression.sh
